Mon Jul  7 10:52:03 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: do not use rb_gc_resurrect(), but create a new dynamic
	  symbol for garbage dynamic symbol.

	* common.mk: use gc.h by parse.y.

Mon Jul  7 02:18:42 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (fstr_update_callback): do not use rb_gc_resurrect()
	  any more.

	  Make new frozen string and replace with garbage frozen string.

	* common.mk: use gc.h from string.c.

Mon Jul  7 00:36:13 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename is_dying_object() to is_garbage_object().

	* gc.h: rb_objspace_garbage_object_p() as an exported function.

Sun Jul  6 21:30:35 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (is_dying_object): fix missed condition.

	* gc.c (is_live_object): move frequent path first.

Sun Jul  6 21:00:11 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename is_dead_object() to is_dying_object().
	  This function is not opposite against is_live_object()
	  because is_dying_object() does *not* check object type.

	* gc.c (is_dying_object): change condition.

	* gc.c (is_live_object): use T_NONE instead of 0.

	* gc.c (rb_objspace_dying_object_p): added.

Sun Jul  6 13:37:27 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_register_mark_object): change data structure.
	  From single array, to array of arrays. Each array only has 1024
	  entries.

	* vm.c (Init_vm_objects): change default capa from 1 to 128.

Sat Jul  5 05:05:53 2014  Vipul A M  <vipulnsward@gmail.com>

	* lib/irb/locale.rb (IRB::Locale#modifier): fix wrong attr_reader
	  `modifieer` => `modifier` from irb locale.  [fix GH-656]

Fri Jul  4 20:45:26 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: rename symbols::sym_id to symbols::str_id.
	  This table is not {Symbol => ID} table, but
	  {String => ID} table.

	* parse.y (lookup_sym_id): also rename lookup_sym_id() to
	  lookup_str_id() because key is not Symbol, but String.

Fri Jul  4 18:42:04 2014  Koichi Sasada  <ko1@atdot.net>
